[gd_scene load_steps=12 format=3 uid="uid://dmfurd482hj0e"]

[ext_resource type="Script" uid="uid://cwuysewbeowtk" path="res://UI_HUD/main_menu.gd" id="1_k42oj"]
[ext_resource type="Texture2D" uid="uid://ckdrs034uxajq" path="res://UI_HUD/mainmenu_goodsize.png" id="2_q2nw8"]
[ext_resource type="AudioStream" uid="uid://bjww0em0r3w6" path="res://MSD/button.wav" id="3_dbg2s"]
[ext_resource type="Theme" uid="uid://bhsirk8npv0i3" path="res://UI_HUD/ButtonTheme.tres" id="3_q2nw8"]
[ext_resource type="AudioStream" uid="uid://bimyf5so6s6ft" path="res://MSD/MenuTheme.mp3" id="5_skhpm"]
[ext_resource type="PackedScene" uid="uid://cvqxihjksyiv8" path="res://maps/fading.tscn" id="6_pd78h"]

[sub_resource type="InputEventKey" id="InputEventKey_k42oj"]

[sub_resource type="Shortcut" id="Shortcut_id7el"]
events = [SubResource("InputEventKey_k42oj")]

[sub_resource type="Animation" id="Animation_pd78h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuTheme:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-10.0]
}

[sub_resource type="Animation" id="Animation_skhpm"]
resource_name = "fadetoLevel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuTheme:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1.9318731),
"update": 0,
"values": [-10.0, -30.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pd78h"]
_data = {
&"RESET": SubResource("Animation_pd78h"),
&"fadetoLevel": SubResource("Animation_skhpm")
}

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_k42oj")

[node name="BackgroundMenu" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("2_q2nw8")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 50.0
offset_right = 59.954956
offset_bottom = 173.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_q2nw8")
shortcut = SubResource("Shortcut_id7el")
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/PlayButton"]
stream = ExtResource("3_dbg2s")

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_q2nw8")
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_q2nw8")
text = "Credits"
metadata/_edit_use_anchors_ = true

[node name="GameTitle" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 385.0
offset_right = 445.0
offset_bottom = 481.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 70
text = "WEREWITCH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_skhpm")
volume_db = -10.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pd78h")
}

[node name="Fading" parent="." instance=ExtResource("6_pd78h")]

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="finished" from="VBoxContainer/PlayButton/AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="Fading/FadingBackground/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Fading"]
